# mdbook-applehelp

./: Cargo.toml  HelpInfo.swift  README.md  generate-help-topics.swift  mdbook-applehelp-full.md
examples/demo-book/: book.toml
examples/demo-book/book/DemoAppHelp.help/Contents/: Info.plist
examples/demo-book/book/DemoAppHelp.help/Contents/Resources/Shared/: style.css
examples/demo-book/book/DemoAppHelp.help/Contents/Resources/en.lproj/: Demo App Help.cshelpindex  Demo App Help.helpindex  getting-started.html  index.html  reference.html
examples/demo-book/book/DemoAppHelp.help/Contents/Resources/en.lproj/getting-started/: first-run.html  installation.html
examples/demo-book/src/: SUMMARY.md  getting-started.md  intro.md  reference.md
examples/demo-book/src/getting-started/: first-run.md  installation.md
src/: bundle.rs  config.rs  css.rs  html.rs  index.rs  main.rs  walk.rs
