[package]
name = "mdbook-applehelp"
version = "0.1.0"
edition = "2021"
description = "An mdBook backend that generates a macOS Apple Help Book (.help bundle)"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/coffee_nebula/mdbook-applehelp"
keywords = ["mdbook", "apple", "help", "macos", "documentation"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "mdbook-applehelp"
path = "src/main.rs"

[dependencies]
mdbook-renderer = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
plist = "1.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
